Add (mocked) utilization of asset
