# apiserver/model_bookings_list.go
@@ -1,0 +1,33 @@
+/*
+ * Booking App
+ *
+ * API to access and configure the Booking App
+ *
+ * API version: 1.1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apiserver
+
+type BookingsList struct {
+
+	// The utilization of the resource in percent.
+	Utilization int32 `json:"utilization,omitempty"`
+
+	Bookings []Booking `json:"bookings,omitempty"`
+}
+
+// AssertBookingsListRequired checks if the required fields are not zero-ed
+func AssertBookingsListRequired(obj BookingsList) error {
+	for _, el := range obj.Bookings {
+		if err := AssertBookingRequired(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+// AssertBookingsListConstraints checks if the values respects the defined constraints
+func AssertBookingsListConstraints(obj BookingsList) error {
+	return nil
+}
